<resources>
    <string name="app_name">Authy</string>
    <string name="bt_on_btn_txt">Bluetooth on</string>
    <string name="bt_off_btn_text">Bluetooth off</string>
    <string name="paired_devices_btn_text">Show paired devices</string>
    <string name="device_textview" />
    <string name="discover_btn_text">Discover devices</string>
    <string name="enable_discoverable_button_txt">Enable Discoverable</string>
    <string name="start_chat_btn_txt">Chat</string>
    <string name="send_msg_btn_text">send</string>
    <string name="send_msg_edittext_text">Enter message...</string>
    <string name="listen_btn_txt">Listen</string>
    <string name="connect_btn_txt">Connect</string>
    <string name="chat_status_txt">chat status</string>
    <string name="be_server_btn_txt">Server</string>
    <string name="be_client_btn_txt">Client</string>
    <string name="conn_status_text">connection status</string>
    <string name="rssi_val_txt">-</string>
    <string name="dst_val_txt">-</string>
    <string name="rssi_activity_btn_txt">Proximity Authentication</string>
    <string name="dst_textview_txt">distance est.</string>
    <string name="rssi_textview_txt">measured RSSI</string>
    <string name="resource_locked">locked</string>
    <string name="resource_unlocked">unlocked</string>
    <string name="RssiActivityName">Proximity Authentication</string>
    <string name="ChatActivityName">Bluetooth Messaging</string>
</resources>
