<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RssiActivity">

    <Button
        android:id="@+id/be_server_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="enableDiscoverable"
        android:text="@string/be_server_btn_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/be_client_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="showPairedDevices"
        android:text="@string/be_client_btn_txt"
        app:layout_constraintBaseline_toBaselineOf="@+id/be_server_btn"
        app:layout_constraintStart_toEndOf="@+id/be_server_btn" />

    <TextView
        android:id="@+id/conn_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/conn_status_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/be_client_btn"
        app:layout_constraintStart_toEndOf="@+id/be_client_btn" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rssi_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/be_client_btn"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/dst_val"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/dst_val_txt"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rssi_val"
        app:layout_constraintTop_toBottomOf="@+id/resource_textview"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/rssi_val"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/rssi_val_txt"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/dst_val"
        app:layout_constraintEnd_toStartOf="@+id/dst_val"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rssi_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rssi_textview_txt"
        app:layout_constraintEnd_toEndOf="@+id/rssi_val"
        app:layout_constraintStart_toStartOf="@+id/rssi_val"
        app:layout_constraintTop_toBottomOf="@+id/rssi_val" />

    <TextView
        android:id="@+id/dst_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dst_textview_txt"
        app:layout_constraintEnd_toEndOf="@+id/dst_val"
        app:layout_constraintStart_toStartOf="@+id/dst_val"
        app:layout_constraintTop_toBottomOf="@+id/dst_val" />

    <TextView
        android:id="@+id/resource_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/resource_locked"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.16000003" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="311dp"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        app:srcCompat="@android:color/background_light" />
</androidx.constraintlayout.widget.ConstraintLayout>